--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,11 @@
-title: Just the Docs Template
-description: A starter template for a Jeykll site using the Just the Docs theme!
+title: Nicheknights Wiki
+description: A wiki of niches in arknights 
 theme: just-the-docs
 
-url: https://just-the-docs.github.io
+url: https://nicheknights.stressd.xyz
 
 aux_links:
   Template Repository: https://github.com/just-the-docs/just-the-docs-template
+
+ruby sass: 
+  quiet_deps: true
