--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,8 @@ callouts:
 # markup / liquid-based content
 footer_content: "Copyright &copy; Segfault"
 
+favicon_ico: "/assets/images/favicon.ico"
+
 # # Footer last edited timestamp
 # last_edit_timestamp: true # show or hide edit time - page must have `last_modified_date` defined in the frontmatter
 # last_edit_time_format: "%e %b %Y at %k:%M" # uses ruby's time format: https://ruby-doc.org/stdlib-2.7.0/libdoc/time/rdoc/Time.html
